# belarusian-poetry

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: Dzie_lazyc_zalatoje_viadzierca.epub  epublib.ipynb
scripts/: scrapy_scrape.py
scripts/poems/Акулін Эдуард/: Elehija.txt
scripts/poems/Александровіч Андрэй/: Dvanaccac_piesien.txt  Pobieda-rus.txt
scripts/poems/Разанаў Алесь/: Doroha_domoj-rus.txt  Hlina_Kamien_Zaleza.txt  Punkciry.txt  U_parku.txt
scripts/poems/Рублеўская Людміла/: Abloha.txt  Kursistki.txt  Partret_babuli.txt  Piasniar.txt  Radavoje_hniazdo.txt  Razchodkata_na_chudoznika-bu.txt  Rod.txt  Rosa_canina-bu.txt  Skaryna_u_Prazie.txt  Slachta.txt  Viecar_u_zascienku.txt
scripts/poems/Русак Адам/: Dzie_ty,_zorka_maja.txt
scripts/poems/Русецкі Аляксей/: Nastanie_ranak,_dzien_minie.txt
scripts/poems/Савіч-Заблоцкі Вайніслаў/: Z_cuzbiny.txt
scripts/poems/Салтук Алег/: Pustaja_chata.txt
scripts/poems/Сваяк Казімір/: Eras_i_Psichieja.txt  Zahlanie_sonca.txt
scripts/poems/Свірка Юрась/: Jasce_raz_pra_maci.txt  Vierny_kreunamu_bractvu.txt
scripts/poems/Семашкевіч Рыгор/: Aposniaja_noc_Kalinouskaha.txt
scripts/poems/Слінко Віктар/: Stolni_viasny.txt
scripts/poems/Смаленец Алесь/: Na_forcie.txt  Na_staroj_dzialancy.txt  Prad_atakaj.txt
scripts/poems/Сокалаў-Воюш Сяржук/: Miakki_znak.txt  Viersy.txt
scripts/poems/Ставер Алесь/: Zurauli_na_Palessie_laciac.txt  Zuravli_na_Polesje_letiat-rus.txt
scripts/poems/Сурначоў Мікола/: List_da_maci.txt  Staronka_maja,_u_smutku.txt  U_stoptanym_zycie.txt
scripts/poems/Цётка/: Mora.txt  (+13 more)
(+139 files in other folders)
