[project]
name = "belarusian-poetry"
version = "0.1.0"
description = "Code for scraping and collecting dataset of poetry in belarusian language"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "ebooklib>=0.19",
    "ipykernel>=6.29.5",
    "requests>=2.32.3",
    "scrapy>=2.13.0",
]
